tests/ui/error-codes/E0054.stderr
error[E0054]: cannot cast `i32` as `bool`
  --> $DIR/E0054.rs:3:24
   |
LL |     let x_is_nonzero = x as bool;
   |                        ^^^^^^^^^
   |
help: compare with zero instead
   |
LL -     let x_is_nonzero = x as bool;
LL +     let x_is_nonzero = x != 0;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0054`.
